<resources>
    <string name="app_name">MealTime Coach</string>
    <string name="img_desc">Img Desc</string>
    <string name="get_started">Get Started</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="name">Your Name</string>
    <string name="signup">Signup</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="diet">Diet</string>
    <string name="age">Age</string>
    <string name="goal">Goal</string>
    <string name="loading">Loading</string>
    <string name="recipes">Recipes</string>
    <string name="done">Done</string>
    <string name="total_amount">Total Amount is €2.99</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="credit_card_date">Credit Card Date</string>
    <string name="cvv">CVV</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="please_select_dietary_preference">Please select your dietary preference:</string>
    <string name="please_select_age_group">Please select your age group:</string>
    <string name="what_is_goal">What is your goal?</string>
</resources>