<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.activities.auth.GetStartedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/get_started"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/top_curved_shape"
            android:orientation="vertical"
            android:padding="4sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="start"
                    android:text="@string/what_should_we_call_you"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/edit_text_shape"
                    android:fontFamily="@font/quicksand_bold"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="16sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="start"
                    android:text="@string/please_select_dietary_preference"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/diets_drop_down"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/diet"
                    android:padding="20sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/quicksand_bold"
                    app:spinner_arrow_animate="true"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8sp"
                    app:spinner_arrow_tint="@color/black"
                    app:spinner_divider_show="false"
                    app:spinner_item_array="@array/diets_array"
                    app:spinner_popup_animation="dropdown"
                    app:spinner_popup_background="@color/white"
                    app:spinner_popup_elevation="8sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="start"
                    android:text="@string/please_select_age_group"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/age_group_drop_down"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/age"
                    android:padding="20sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/quicksand_bold"
                    app:spinner_arrow_animate="true"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8sp"
                    app:spinner_arrow_tint="@color/black"
                    app:spinner_divider_show="false"
                    app:spinner_item_array="@array/age_group_array"
                    app:spinner_popup_animation="dropdown"
                    app:spinner_popup_background="@color/white"
                    app:spinner_popup_elevation="8sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="start"
                    android:text="@string/what_is_goal"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/goal_drop_down"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/goal"
                    android:padding="20sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/quicksand_bold"
                    app:spinner_arrow_animate="true"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8sp"
                    app:spinner_arrow_tint="@color/black"
                    app:spinner_divider_show="false"
                    app:spinner_item_array="@array/goal_array"
                    app:spinner_popup_animation="dropdown"
                    app:spinner_popup_background="@color/white"
                    app:spinner_popup_elevation="8sp" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/done_button_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                app:cardBackgroundColor="@color/black"
                app:cardCornerRadius="32sp"
                app:cardElevation="6sp"
                app:contentPadding="14sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bottom_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="32sp"
                app:cardElevation="10sp"
                app:contentPadding="10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/diet_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/age_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/goal_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:fontFamily="@font/quicksand_bold"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/signup_button_card_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginRight="10sp"
                        android:layout_marginBottom="10sp"
                        app:cardBackgroundColor="@color/main_color"
                        app:cardCornerRadius="32sp"
                        app:cardElevation="6sp"
                        app:contentPadding="14sp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quicksand_bold"
                            android:gravity="center"
                            android:text="@string/signup"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>


</ScrollView>