<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.activities.auth.PaymentGatewayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/total_amount"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/credit_card_number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/credit_card_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/edit_text_shape"
                android:fontFamily="@font/quicksand_bold"
                android:hint="@string/credit_card_number"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="16sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/credit_card_date"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/credit_card_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/edit_text_shape"
                android:fontFamily="@font/quicksand_bold"
                android:hint="@string/credit_card_date"
                android:importantForAutofill="no"
                android:inputType="date"
                android:padding="16sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="30sp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/cvv"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/cvv_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/edit_text_shape"
                android:fontFamily="@font/quicksand_bold"
                android:hint="@string/cvv"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="16sp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/done_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="40sp"
            android:layout_marginRight="30sp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="32sp"
            app:cardElevation="6sp"
            app:contentPadding="14sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>