<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.activities.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            app:cardBackgroundColor="@color/main_color"
            app:cardCornerRadius="32sp"
            app:cardElevation="10sp"
            app:contentPadding="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="36sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="30sp"
                    android:layout_marginRight="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="@string/email"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:background="@drawable/edit_text_shape"
                        android:fontFamily="@font/quicksand_bold"
                        android:hint="@string/email"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:padding="16sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="10sp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="@string/password"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10sp"
                        android:background="@drawable/edit_text_shape"
                        android:fontFamily="@font/quicksand_bold"
                        android:hint="@string/password"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:padding="16sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/login_button_card_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="50sp"
                    android:layout_marginRight="10sp"
                    android:layout_marginBottom="20sp"
                    app:cardBackgroundColor="@color/black"
                    app:cardCornerRadius="32sp"
                    app:cardElevation="6sp"
                    app:contentPadding="14sp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/login_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/quicksand_bold"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <ProgressBar
                            android:id="@+id/progress_bar"
                            android:layout_width="30sp"
                            android:layout_height="30sp"
                            android:layout_centerInParent="true"
                            android:visibility="invisible" />

                    </RelativeLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>